<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WorkSheets</string>
    <string name="clientAdded">Cliente añadido correctamente</string>
    <string name="errorUnexpected">Error inesperado</string>
    <string name="invalidEmail">Formato de email no válido</string>
    <string name="noSignature">El campo de firma está vacío</string>
    <string name="wrongPassword">Contraseña incorrecta</string>
    <string name="messageSent">Mensaje enviado</string>
    <string name="messageCancel">Mensaje cancelado</string>
    <string name="sheet">Parte de trabajo</string>
    <string name="new_work_sheet">Nuevo parte de trabajo</string>
    <string name="new_client">Nuevo cliente</string>
    <string name="get_historical">Ver histórico de partes</string>
    <string name="worker">Trabajador</string>
    <string name="customer">Cliente</string>
    <string name="add_customer">+</string>
    <string name="search">Buscar parte...</string>
    <string name="location">Localización</string>
    <string name="btn_add_customer">Añadir cliente</string>
    <string name="description">Descripción</string>
    <string name="address">Dirección</string>
    <string name="phone">Teléfono</string>
    <string name="email">Correo</string>
    <string name="enterprise">Empresa</string>
    <string name="date">Fecha</string>
    <string name="time">Tiempo</string>
    <string name="sign">Firmar parte de trabajo</string>
    <string name="start">Inicio</string>
    <string name="end">Finalización</string>
    <string name="confirm">Confirmar</string>
    <string name="clean">Limpiar</string>
    <string name="title_activity_maps">Map</string>
    <string name="contactPerson">Persona de contacto</string>
    <string name="contactSignature">Firma de contacto</string>
    <string name="callCustomer">Llamar al cliente</string>
    <string name="yourPassword">Tu contraseña</string>
    <string name="empty">Existen campos vacíos. Por favor, revíselos.</string>
    <string name="send">Enviar email...</string>
    <string name="send_email">¿Desea envíar ahora un email con el parte de trabajo generado?</string>
    <string name="check_hour">Las horas especificadas deberán tener un formato correcto y la hora de finalización deberá ser posterior a la de inicio</string>
</resources>
